# LinuxDev2020

./: .gitignore  README.md
03_TerminalProject/: .Makefile.un~  .Show.c.swp  .Show.c.un~  Makefile  Show  Show.c  Show.c~
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  window.c
05_Environmental/lib/: CMakeLists.txt  pcre.c  pcre.h
06_Debugging/: main.c
07_DebuggingTracing/: makefile  wrap.c
08_TestingCoverage/: CMakeLists.txt  ReadMe.md  tests.c
08_TestingCoverage/src/: CMakeLists.txt
09_I18nL10n/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  main.c  numfinder  numfinder.pot  ru_numfinder.po
09_I18nL10n/autom4te.cache/: output.0  requests  traces.0  traces.1
10_Documenting/: .main.c.swo  .main.c.swp  .numfinder.md.swp  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  main.c  numfinder  numfinder.md  numfinder.new.pot  numfinder.pot  ru_numfinder.po
10_Documenting/.deps/: main.Po
10_Documenting/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
10_Documenting/doxygen-doc/html/: config_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html
10_Documenting/doxygen-doc/html/search/: all_0.js  all_1.js  all_2.js  defines_0.js  functions_0.js  functions_1.js  searchdata.js
10_Documenting/doxygen-doc/latex/: files.tex  index.tex  main_8c.tex  refman.tex
10_Documenting/ru/LC_MESSAGES/: numfinder.mo
11_Toolkits/: Makefile  counter  counter.c  txt11.txt
12_ScriptingText/: Makefile.am  configure.ac  const.c  fun.c  outlib.h  prog.c  readme.md
13_PatchInstall/: configure.ac  numfinder.pot  ru_numfinder.po
