AM_CFLAGS = -Wall

bin_PROGRAMS = prog
prog_SOURCES = prog.c fun.c const.c outlib.h


cleanall:
	rm compile config.status config.sub config.guess libtool ltmain.sh 

	rm -rf prog configure *~ *.o *.log *.in *.m4 config.h* \
		   Makefile depcomp config.status \
		   compile install-sh missing stamp-h1 autom4te.cache .deps
